change loading models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "csbdeep>=0.8.1",
+    "ipywidgets>=8.1.7",
+    "jupyterlab-widgets>=3.0.15",
     "matplotlib>=3.10.3",
     "notebook>=7.4.4",
     "numpy>=1.26.4",
     "openslide-bin>=4.0.0.8",
     "openslide-python>=1.4.2",
     "pillow>=11.3.0",
+    "scikit-image>=0.19.3",
     "shapely>=2.1.1",
     "stardist>=0.9.1",
     "tensorflow>=2.18.1",
